# NumC

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_perf_test.sh  tec.h
benchmarks/: c_bm.c  py_bm.py
example/: numc_example.c
include/: basic_ops.h  ndarray.h  ndarray_ops.h  numc.h  slice.h  utils.h
include/core/: ndarray.h  slice.h
include/numc/: numc.h  pch.h
include/numc/core/: core.h  error.h  ndarray.h  slice.h
include/numc/internal/: broadcast.h  error_internal.h  utils.h
include/numc/internal/ops/: basic_ops.h
include/numc/ops/: basic_ops.h  ops.h  reduction_ops.h
include/numc/utils/: macros.h
include/ops/: basic_ops.h  reduction_ops.h
src/: ndarray.c  ndarray_ops.c  numc.c
src/core/: error.c  ndarray.c  slice.c
src/internal/: broadcast.c
src/ops/: basic_ops.c  reduction_ops.c
tests/: edge_cases.c  ndarry_creation_test.c  test_runner.c
tests/core/: ndarray_creation.c  ndarray_indexing.c  ndarray_reshape.c
tests/ops/: ndarray_broadcast.c  ndarray_ops.c  ndarray_reduction.c
